# Translator

./: app.py  pyproject.toml
templates/: index.html
