[tool.poetry]
name = "translit"
version = "0.1.0"
description = ""
authors = ["Serhii <komkoraz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
googletrans = "^3.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
